# fingerprint

./: Cargo.toml  LICENSE  README.md
samples/: ascii_different.txt  ascii_similar.txt  ascii_somewhat_similar.txt
src/: lib.rs  mod.rs  vid_finder.rs  vid_finder1.rs  video_fingerprint.rs  video_rs.rs
src/fingerprinters/: mod.rs  raw.rs
