[package]
name = "fingerprint"
description = "Rust file fingerprinting library, supporting many types of audio/video/image/text/raw file formats."
version = "0.0.3"
edition = "2021"
authors = ["Simon Allen <simon@simonallen.org>"]
license = "MIT"
homepage = "https://github.com/garfunkel/fingerprint"
repository = "https://github.com/garfunkel/fingerprint"
keywords = ["video", "image", "audio", "fingerprint", "hash"]
categories = ["command-line-utilities", "filesystem", "multimedia", "encoding"]

[dependencies]
clap = {version = "3.2.16", features = ["derive"]}
infer = "0.9.0"
rand = {version = "0.8.5", features = ["small_rng"]}
rand_chacha = "0.3.1"
divrem = "1.0.0"
bitvec = "1.0.1"
hex = "0.4.3"
sha2 = "0.10" # for hashing video frames
ffmpeg-sys-next = "7.0.2"
ffmpeg-next = "7.0.2"
phash = "0.1.0"          # Perceptual hashing library
image = "0.24"
lh = "0.3.1"
imageproc = "0.25.0"
image_hasher = "2.0.0"
blake3 = "1.5.4"
img_hash = "3.2.0"
vid_dup_finder_lib = "0.1.1"

[features]
default = ["image", "video", "audio", "text"]
image = []
video = []
audio = []
text = []
avdevice = []
avfilter = []
avformat = []
swresample = []
swscale = []

[package.metadata.docs.rs]
all-features = true
